--- a/bs-config.json
+++ b/bs-config.json
@@ -1,5 +1,6 @@
 {
   "port": 5051,
-  "files": ["./wwwroot/**/*.{html,htm,css,js}"],
-  "server": { "baseDir": "./wwwroot" }
+  "files": ["./wwwroot/**/*.{html,htm,css,js,ts,map}"],
+  "server": { "baseDir": "./wwwroot" },
+  "browser": "firefox"
 }
