--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,19 @@
 {
-    "version": "0.1.0",
-    "configurations": [{
-        "name": "Launch Chrome against localhost, with sourcemaps",
-        "type": "chrome",
-        "request": "launch",
-        "url": "http://localhost:5051/",
-        "runtimeArgs": [
-            "--new-window", //Open in new window
-            "--remote-debugging-port=9222" //Open in port 9222 (standard chrome debug port)
-        ],
-        "sourceMaps": true,
-        "trace": true,
-        "webRoot": "${workspaceRoot}/wwwroot/",
-        "userDataDir": "${workspaceRoot}/.vscode/chrome"
-    }
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Launch Chrome against localhost",
+            "url": "https://localhost:4200",
+            "webRoot": "${workspaceRoot}"
+        },
+        {
+            "type": "chrome",
+            "request": "attach",
+            "name": "Attach to Chrome",
+            "port": 9222,
+            "webRoot": "${workspaceRoot}"
+        }
     ]
-    
 }
